# miso-bandit

./: Makefile  README.md  cabal.project  flake.nix  miso-bandit.cabal
.github/workflows/: deploy.yml
docs/: index.html
src/: Bandit.hs  Main.hs
src/Bandit/: Actions.hs  Metrics.hs  Model.hs  Update.hs  View.hs
src/Bandit/Algorithm/: EpsilonGreedy.hs  ThompsonSampling.hs  Types.hs  UCB.hs
src/Bandit/View/: Arms.hs  Charts.hs  Controls.hs  Statistics.hs
src/Bandit/View/Charts/: Arms.hs  Common.hs  Regret.hs  Rewards.hs
